class selection practice, added bold font to two name and added a paragraph

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,9 @@ ul {
     color: blueviolet;
     background-color: black;
 }
+/* class practice..bolded 2 names */
+.bold {
+    font-weight: bold;
+    font-style: italic;
+    font-size: large;
+}
